Fix mid-word character breaking in hero h1 and h2 by introducing inline-block text wrapping

--- a/includes/stylesheets/join-ai.css
+++ b/includes/stylesheets/join-ai.css
@@ -189,6 +189,9 @@ body {
   color: #00adcf;
   font-weight: 900;
 }
+.inline-block-span {
+  display: inline-block;
+}
 .hero .text-contents {
   height: -moz-fit-content;
   height: fit-content;
